--- a/contact.html
+++ b/contact.html
@@ -10,32 +10,32 @@
 
     <!-- boostrap 5.1.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
-  <body class="bg-light">
+  <body class="bg-gray">
 
     <!-- nav -->
-    <nav class="navbar fixed-top navbar-light bg-info">
+    <nav class="navbar fixed-top navbar-light bg-info mb-4 border border-4 border-top-0 border-start-0 border-end-0 border-success">
       <div class="container">
-        <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link text-white" href="games.html">Games</a>
-        <a class="nav-link text-white" href="web.html">Websites</a>
-        <a class="nav-link text-white" href="cv.html">About Me</a>
+        <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a></a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="games.html">Games</a></a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="web.html">Websites</a></a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="cv.html">About Me</a></a><span class="text-success">|</span>
         <a class="nav-link text-white" href="#">Contact</a>
       </div>
     </nav>
 
-    <main class="container">
+    <main class="container" style="margin-top: 150px;">
 
-      <div class="card">
+      <div class="card border-2 border-dark py-5">
         <div class="card-block">
 
           <h2 class="card-title p-3">Contact Details</h2>
 
           <div class="card-body">
 
-            <p>Contact Tel: 07902562213</p>
+            <p>Contact Tel: 0790 256 2213</p>
             <a class="email-link" href="mailto:neil.mckenna.dev@gmail.com?subject=cv contact">neil.mckenna.dev@gmail.com</a>
             <hr>
 
@@ -45,9 +45,9 @@
 
           </div>
 
-          <div class="col-md-12">
-            <form enctype="text/plain" action="mailto:emberhawk97@gmail.com?subject=Contact Me" method="post">
-              <div class="form-group">
+          <div class="col-sm-8 col-md-8 col-lg-8 mx-auto rounded">
+            <form class="bg-success p-2 rounded" enctype="text/plain" action="mailto:emberhawk97@gmail.com?subject=Contact Me" method="post">
+              <div class="form-group pt-3 ">
 
                 <input type="text" name="Sender: " placeholder="Enter your name: " value="" class="form-control"><br>
               </div>
@@ -59,15 +59,19 @@
 
                 <textarea name="Message: " rows="8" cols="80" placeholder="Enter your message:" class="form-control"></textarea><br>
               </div>
-              <div class="form-group">
+              <div class="form-group pb-2">
                 <input type="submit" name="" class="btn btn-primary">
               </div>
             </form>
           </div>
+          <br>
+          <hr>
 
         </div>
+        <br>
 
       </main>
+      <br>
 
 
 
