--- a/cv.html
+++ b/cv.html
@@ -10,24 +10,25 @@
 
     <!-- boostrap 5.1.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
 
   </head>
 
-  <body class="bg-gray">
+  <body class="bg-gray text-left">
 
     <!-- nav -->
-    <nav class="navbar fixed-top navbar-light bg-info">
+    <nav class="navbar fixed-top navbar-light bg-info mb-4 border border-4 border-top-0 border-start-0 border-end-0 border-success">
       <div class="container">
-        <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link text-white" href="games.html">Games</a>
-        <a class="nav-link text-white" href="web.html">Websites</a>
-        <a class="nav-link text-white" href="#">About Me</a>
+        <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a></a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="games.html">Games</a></a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="web.html">Websites</a></a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="#">About Me</a></a><span class="text-success">|</span>
         <a class="nav-link text-white" href="contact.html">Contact</a>
       </div>
     </nav>
 
-    <main class="container bg-light rounded" style="margin-top: 100px;border: 2px solid black;">
-      <div class="p-2">
+    <main class="container bg-light rounded" style="margin-top: 160px;border: 2px solid black;">
+      <div class="container p-2">
         <h2 class="text-center"><u>Who Am I ? - <em>Neil Mckenna</em></u></h2>
         <div class="row pt-4 mb-1">
           <div class="col-sm-4 col-md-4 col-lg-4">
@@ -36,28 +37,33 @@
               <figcaption>Me Posing Awkwardly</figcaption>
             </figure>
           </div>
-          <div class="col-sm-8 col-md-8 col-lg-8 p-2">
-            <p>I am a Former Napier Student of Computer Science & Forensics</p>
-            <p>Currently 37 year old, (millenial) who grew up in Edinburgh<p>
-            <p>Just your typical techie {
-              pc-repair-man
-              ,game_developer
-              ,web_developer
-              ,network fixer  
+          <div id="cv" class="col-sm-8 col-md-8 col-lg-8 p-2">
+            <div class="py-2">
+              <ol style="list-style:square;">
+                <li>I am a Former Napier Student, Edinburgh College, Liberton High</li>
+                <li>(typical millenial) 37 year old who grew up mainly in Edinburgh</li>
+                <li>An avid Video Gamer and consumer of sports on tv</li>
+                <li>Career wise I am mainly things</li>
+                <ol style="list-style:circle;">
+                    <li>Techinical Support</li>
+                    <li>PC Repair Man</li>
+                    <li>Web Developer</li>
+                    <li>Game Developer</li>
+                    <li>Bad Sales Man</li>
+                </ol>
+              <ol>
+            </div>
 
-            } </p>
-            <p>An Avid Video Gamer and consumer of sports</p>
-            <p></p>
           </div>
         </div><!-- row end -->
       </div>
       <hr>
 
-      <div class="container rounded">
+      <div id="cv" class="container rounded">
         <h4><u>Home Studying</u></h4>
         <p>
           <ol>
-            <li>I have been at home studying more Unity/C# Game Programming currently working (debugging) on udemy course <a href="https://www.udemy.com/course/unity-2d-dungeon-gunner-roguelike-development-course/">2D random dungeon shooter course</a> </li>
+            <li>I have been at home studying more Unity/C# Game Programming currently working (debugging) on udemy course <a href="https://www.udemy.com/course/unity-2d-dungeon-gunner-roguelike-development-course/">2D random dungeon shooter course</a></li>
             <li>I have playing alot of <a href="https://en.wikipedia.org/wiki/Elden_Ring">Elden Ring</a> currently up to ng2</li>
             <li>Setup up a <a href="https://www.linkedin.com/in/neil-mckenna-9b1406239/">LinkedIn Profile</a> to try and appeal to a wider audience and actually appear professional?</li>
           </ol>
@@ -65,7 +71,7 @@
         </p>
       </div>
 
-      <div class="container rounded">
+      <div id="cv" class="container rounded">
         <h4><u>Leaving McewanFraserLegal Ltd</u></h4>
         <p>
           In march I left <a href="https://www.mcewanfraserlegal.co.uk/">McewanFraserLegal</a> to pursue other enterprises.
