--- a/games.html
+++ b/games.html
@@ -6,32 +6,35 @@
 
     <!-- boostrap 5.1.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
 
   </head>
-  <body>
+  <body class="gx-3 container">
     <!-- nav -->
-    <nav class="navbar fixed-top navbar-light bg-info">
-      <div class="container">
-        <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link text-white" href="#">Games</a>
-        <a class="nav-link text-white" href="web.html">Websites</a>
-        <a class="nav-link text-white" href="cv.html">About Me</a>
+    <nav class="navbar fixed-top navbar-light bg-info mb-4 border border-4 border-top-0 border-start-0 border-end-0 border-success">
+      <div class="container ">
+        <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a></a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="#">Games</a></a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="web.html">Websites</a></a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="cv.html">About Me</a></a><span class="text-success">|</span>
         <a class="nav-link text-white" href="contact.html">Contact</a>
       </div>
     </nav>
+    <div>
+      <section class="py-2 text-center container mb-4 mt-4 ">
+        <div class="row py-lg-5">
+          <div class="col-sm-10 col-md-10 col-lg-10 mx-auto">
+            <h1 class="fw-light text-white">My Games gallery</h1>
+            <p class="lead text-white">These are games I haved created in the last year, most of them are guided tutorials or code alongs, I present them to you for a more clear understanding.</p>
+            <em class="bg-warning">Just a heads up these games were mainly made for the pc and won't really work on the mobile devices, either due to scale or input. I may update in the future for now just use a keyboard and mouse.</em>
 
-    <section class="py-5 text-center container mb-4">
-      <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">My Games gallery</h1>
-          <p class="lead text-muted">These are games I haved created in the last year, most of them are guided tutorials or code alongs, I present them to you for a more clear understanding.</p>
-          <em>Just a heads up these games were mainly made for the pc and won't really work on the mobile devices, either due to scale or input. I may update in the future for now just use a keyboard and mouse.</em>
-
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
-    <div class="album py-5 bg-light mt-5">
+
+    <div class="album py-5 bg-light mt-5 border-2 border-dark rounded" style="border: 1px solid black;">
       <div class="container">
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
