--- a/index.html
+++ b/index.html
@@ -10,49 +10,38 @@
 
     <!-- boostrap 5.1.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
 
-    <title>Neil New Portfolio</title>
+    <title>Neil's Portfolio</title>
 
   </head>
-  <body class="" style="background-color: #D3D3D3;">
+  <body class="gx-2 container">
 
     <!-- nav -->
-    <nav class="navbar fixed-top navbar-light bg-info">
+    <nav class="navbar fixed-top navbar-light bg-info mb-4 border border-4 border-top-0 border-start-0 border-end-0 border-success">
       <div class="container">
-        <a class="navbar-brand active text-white" aria-current="page" href="#">Home</a>
-        <a class="nav-link text-white" href="games.html">Games</a>
-        <a class="nav-link text-white" href="web.html">Websites</a>
-        <a class="nav-link text-white" href="cv.html">About Me</a>
+        <a class="navbar-brand active text-white" aria-current="page" href="#">Home</a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="games.html">Games</a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="web.html">Websites</a><span class="text-success">|</span>
+        <a class="nav-link text-white" href="cv.html">About Me</a><span class="text-success">|</span>
         <a class="nav-link text-white" href="contact.html">Contact</a>
       </div>
     </nav>
 
     <!-- main container -->
-    <div class="container-fluid" style="margin-top: 200px;">
+    <div class="container bg-light rounded border-1 border-dark" style="margin-top: 200px;border: 1px solid black;">
       <div class="container">
-        <h1 class="h1 text-center p-3 my-2"><em><strong>Neil Mckenna</strong></em></h1>
-        <h4 class="text-center my-4 lead"><u><strong>What have I been up to recently</strong></u></h4>
-
-      </div>
-
-      <div class="container rounded bg-light">
-
-        <div class="container bg-warning rounded p-2 pt-2 py-2">
-          <h4><u>Fixing This Portfolio</u></h4>
-          <p>
-            Currently working on improving this site for the future.
-            I also decided to fix my portfolios as they need work(still under construction)
-          </p>
-          <p>Please Browse the links at the top for more context<p>
+        <h1 class="text-center my-3 fs-4 py-2">My name is <em class="fs-1">Neil Mckenna</em></h1>
+        <h2 class="text-center my-4 lead fs-2 py-2"><strong>Welcome to My Portfolio</strong></h2>
+        <h5 class="text-center my-1 text-muted fs-6"><u><strong>It may not be the most aestically pleasing but I mean to change it in time.</strong></u></h5>
+        <div class="container py-4">
+          <p>Feel free to have a <span class="fs-1">&#x1f440;</span> around my site</p>
+          <p>There's Navigation links at the <span class="fs-1">&#128285;</span> of the page.</p>
         </div>
-
-
-
-
       </div>
 
 
-    </div>
+    </div><!-- main container -->
 
 
     <!-- boostrap js  -->
